working on api authentication
