# storage/api-docs/api-docs.json
@@ -22,7 +22,7 @@
         }
     ],
     "paths": {
-        "/register": {
+        "/api/v1/guest/register": {
             "post": {
                 "tags": [
                     "Guest"
@@ -54,10 +54,66 @@
                     }
                 }
             }
+        },
+        "/api/v1/guest/login": {
+            "post": {
+                "tags": [
+                    "Guest"
+                ],
+                "summary": "User Login",
+                "description": "User login",
+                "operationId": "Login",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Login"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "Login": {
+                "title": "Login",
+                "description": "User Login request body data",
+                "properties": {
+                    "email": {
+                        "title": "email",
+                        "description": "email",
+                        "type": "string",
+                        "example": "email"
+                    },
+                    "password": {
+                        "title": "password",
+                        "description": "password",
+                        "type": "string",
+                        "example": "password"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Login"
+                }
+            },
             "Register": {
                 "title": "Register",
                 "description": "User register request body",
